--- a/styles/layouts/_section.scss
+++ b/styles/layouts/_section.scss
@@ -144,7 +144,7 @@
   .funitureItems {
     padding-top: 10vh;
     display: grid;
-    grid-auto-flow: row;
+    // grid-auto-flow: row;
     place-items: center;
     div {
       width: 90%;
