--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@
   .section4 .customerReviewSection {
     display: flex;
     align-items: center;
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
     width: 90%;
     margin: 0 auto;
   }
@@ -127,8 +129,25 @@
     text-align: start !important;
   }
   .section4 .customerReviewSection .customerReviewText p {
+    width: 100% !important;
     text-align: start !important;
     margin: 0 !important;
+    font-size: 0.8rem;
+  }
+  .section4 .customerReviewSection .customerReviewText p span {
+    font-size: 0.8rem;
+  }
+  .section4 .customerReviewSection .customerReviewText .readMoreBtnContainer {
+    justify-content: flex-start !important;
+  }
+  .section4 .customerReviewSection .customerReviewText .ratingsContainer {
+    justify-content: flex-start !important;
+  }
+  .section4 .customerReviewSection .customerReviewImg {
+    padding-top: 0 !important;
+  }
+  .section4 .customerReviewSection .customerReviewImg img {
+    width: 500px !important;
   }
 
   .section5 .companyLogoContainer .company {
@@ -464,7 +483,8 @@ header nav .search_cart {
 .section4 .customerReviewSection .customerReviewText .readMoreBtnContainer #myBtn {
   background-color: hsl(196deg, 36%, 17%);
   color: white;
-  padding: 1rem 1.5rem;
+  font-size: 0.7rem;
+  padding: 0.4rem 1rem;
   border-radius: 2rem;
   border: none;
 }
