--- a/style.css
+++ b/style.css
@@ -165,6 +165,55 @@
   .section5 .companyLogoContainer .company img:hover {
     filter: grayscale(0%);
   }
+
+  footer .footerFlex {
+    display: flex;
+    align-items: flex-start !important;
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
+    width: 90%;
+    margin: 0 auto;
+  }
+  footer .footerFlex .faq {
+    margin-top: 0 !important;
+  }
+  footer .footerFlex .faq .question {
+    padding-top: 0 !important;
+    justify-content: flex-start !important;
+    position: relative;
+    padding-bottom: 3rem !important;
+  }
+  footer .footerFlex .faq .question::after {
+    content: "";
+    width: 50px;
+    height: 2px;
+    background-color: hsl(196deg, 10%, 38%);
+    position: absolute;
+    top: 60px;
+  }
+  footer .footerFlex .faq .question h3 {
+    text-align: start !important;
+  }
+  footer .footerFlex .faq .question i {
+    display: none;
+  }
+  footer .footerFlex .faq .answer {
+    max-height: 300px !important;
+  }
+  footer .footerFlex .faq .answer p {
+    color: hsl(196deg, 10%, 38%);
+    text-align: start !important;
+  }
+  footer .footerFlex .footerPenito .footerLogo {
+    justify-content: flex-start !important;
+  }
+  footer .footerFlex .footerPenito p {
+    text-align: start !important;
+    width: 70%;
+  }
+  footer .footerFlex .footerPenito .smLogo {
+    justify-content: flex-start !important;
+  }
 }
 header {
   background-color: #f4f4f4;
@@ -179,6 +228,9 @@ header nav {
   align-items: center;
   width: 90%;
   margin: 0 auto;
+}
+header nav .headerLogoContainer img {
+  cursor: pointer;
 }
 header nav .menuLinks2 {
   display: none;
@@ -602,6 +654,9 @@ footer .footerFlex .footerPenito .footerLogo {
   justify-content: center;
   padding-bottom: 1rem;
 }
+footer .footerFlex .footerPenito .footerLogo img {
+  cursor: pointer;
+}
 footer .footerFlex .footerPenito p {
   text-align: center;
   color: hsl(196deg, 10%, 38%);
@@ -613,6 +668,9 @@ footer .footerFlex .footerPenito .smLogo {
        column-gap: 1.5rem;
   padding-top: 2rem;
   padding-bottom: 0.5rem;
+}
+footer .footerFlex .footerPenito .smLogo div img {
+  cursor: pointer;
 }
 footer .footerFlex .faq {
   max-width: 700px;
