--- a/styles/components/_media.scss
+++ b/styles/components/_media.scss
@@ -17,42 +17,48 @@
       }
       .bars {
         display: none;
+        i {
+          display: none;
+        }
       }
       .search_cart {
         display: flex !important;
         column-gap: 1rem;
+        .searchContainer {
+          display: block !important;
+        }
       }
     }
   }
 
-  .section1{
+  .section1 {
     flex-direction: row !important;
     align-items: center;
-    .textIntro{
-      h1{
+    .textIntro {
+      h1 {
         text-align: start !important;
       }
-      p{
+      p {
         text-align: start;
       }
-      .btn1_btn2{
+      .btn1_btn2 {
         justify-content: flex-start !important;
       }
     }
-    .introImgContainer{
+    .introImgContainer {
       margin-top: 0 !important;
     }
   }
 
   .section2 {
-    #items{
+    #items {
       display: grid;
       grid-template-columns: repeat(3, auto);
-      div{
+      div {
         height: 36rem;
       }
     }
-    p{
+    p {
       width: 70% !important;
       margin: 0 auto;
     }
@@ -83,37 +89,37 @@
         }
       }
     }
-  .seeMoreBtnContainer{
-    button{
-      &:hover{
-        color: hsla(196, 36%, 17%, 1);
-        background-color: transparent;
-        border: 1px solid hsla(196, 36%, 17%, 1);
+    .seeMoreBtnContainer {
+      button {
+        &:hover {
+          color: hsla(196, 36%, 17%, 1);
+          background-color: transparent;
+          border: 1px solid hsla(196, 36%, 17%, 1);
+        }
       }
     }
   }
-  }
 
-  .section3{
-    .services_image{
+  .section3 {
+    .services_image {
       display: flex;
       align-items: center;
       width: 90%;
       margin: 0 auto;
-      .services{
+      .services {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        .serviceIllustration{
-          .serviceIllustrationImg{
+        .serviceIllustration {
+          .serviceIllustrationImg {
             justify-content: flex-start !important;
-            img{
+            img {
               height: 3rem;
             }
           }
-          h2{
+          h2 {
             text-align: start !important;
           }
-          p{
+          p {
             text-align: start !important;
             margin: 0 !important;
           }
@@ -122,44 +128,44 @@
     }
   }
 
-  .section4{
-    .customerReviewSection{
+  .section4 {
+    .customerReviewSection {
       display: flex;
       align-items: center;
       column-gap: 1rem;
       width: 90%;
       margin: 0 auto;
-      .customerReviewText{
-        h2{
+      .customerReviewText {
+        h2 {
           text-align: start !important;
         }
-        p{
+        p {
           width: 100% !important;
           text-align: start !important;
           margin: 0 !important;
-          font-size: .8rem;
-          span{
-            font-size: .8rem;
+          font-size: 0.8rem;
+          span {
+            font-size: 0.8rem;
           }
         }
-        .readMoreBtnContainer{
+        .readMoreBtnContainer {
           justify-content: flex-start !important;
         }
-        .ratingsContainer{
+        .ratingsContainer {
           justify-content: flex-start !important;
         }
       }
-      .customerReviewImg{
+      .customerReviewImg {
         padding-top: 0 !important;
-        img{
+        img {
           width: 500px !important;
         }
       }
     }
   }
 
-  .section5{
-    .companyLogoContainer{
+  .section5 {
+    .companyLogoContainer {
       .company {
         margin: auto;
         transition: 0.4s ease-in-out;
@@ -178,53 +184,53 @@
     }
   }
 
-  footer{
-    .footerFlex{
+  footer {
+    .footerFlex {
       display: flex;
       align-items: flex-start !important;
       column-gap: 1rem;
       width: 90%;
       margin: 0 auto;
-      .faq{
+      .faq {
         margin-top: 0 !important;
-        .question{
+        .question {
           padding-top: 0 !important;
           justify-content: flex-start !important;
           position: relative;
           padding-bottom: 3rem !important;
-          &::after{
-            content: '';
+          &::after {
+            content: "";
             width: 50px;
             height: 2px;
             background-color: hsla(196, 10%, 38%, 1);
             position: absolute;
             top: 60px;
           }
-          h3{
+          h3 {
             text-align: start !important;
           }
-          i{
+          i {
             display: none;
           }
         }
-        .answer{
+        .answer {
           max-height: 300px !important;
-          p{
+          p {
             color: hsla(196, 10%, 38%, 1);
             text-align: start !important;
           }
         }
       }
-      .footerPenito{
+      .footerPenito {
         // transform: translateY(-7%);
-        .footerLogo{
+        .footerLogo {
           justify-content: flex-start !important;
         }
-        p{
+        p {
           text-align: start !important;
           width: 70%;
         }
-        .smLogo{
+        .smLogo {
           justify-content: flex-start !important;
         }
       }
