--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@
   header nav .bars {
     display: none;
   }
+  header nav .bars .cartContainer {
+    display: none !important;
+  }
   header nav .bars i {
     display: none;
   }
@@ -35,6 +38,9 @@
          column-gap: 1rem;
   }
   header nav .search_cart .searchContainer {
+    display: block !important;
+  }
+  header nav .search_cart .cartContainer {
     display: block !important;
   }
 
