--- a/styles/components/_media.scss
+++ b/styles/components/_media.scss
@@ -17,6 +17,9 @@
       }
       .bars {
         display: none;
+        .cartContainer{
+          display: none !important;
+        }
         i {
           display: none;
         }
@@ -25,6 +28,9 @@
         display: flex !important;
         column-gap: 1rem;
         .searchContainer {
+          display: block !important;
+        }
+        .cartContainer {
           display: block !important;
         }
       }
