--- a/styles/components/_media.scss
+++ b/styles/components/_media.scss
@@ -12,12 +12,46 @@
           a {
             color: hsla(196, 35%, 11%, 1);
             font-size: 1rem;
+            position: relative;
+            transition: 0.5s ease;
+            &:hover {
+              font-weight: 500;
+              opacity: 1;
+            }
+            &::before {
+              content: "";
+              width: 100%;
+              height: 2px;
+              opacity: 0.001;
+              position: absolute;
+              top: 100%;
+              left: 0;
+              transition: 0.5s ease;
+              background-color: hsla(196, 35%, 11%, 1);
+            }
+            &:hover::before {
+              width: 0;
+              opacity: 1;
+            }
+            &::after {
+              content: "";
+              width: 0;
+              height: 2px;
+              background-color: #1f1534;
+              position: absolute;
+              bottom: 100%;
+              right: 0;
+              transition: 0.5s ease;
+            }
+            &:hover::after {
+              width: 100%;
+            }
           }
         }
       }
       .bars {
         display: none;
-        .cartContainer{
+        .cartContainer {
           display: none !important;
         }
         i {
@@ -49,6 +83,30 @@
       }
       .btn1_btn2 {
         justify-content: flex-start !important;
+        .btn1Container {
+          button {
+            transition: all 0.5s ease;
+            cursor: pointer;
+            &:hover {
+              background-color: transparent;
+              border: 1px solid hsla(196, 36%, 17%, 1);
+            }
+            &:hover p {
+              color: hsla(196, 36%, 17%, 1) !important;
+            }
+          }
+        }
+        .btn2Container {
+          button {
+            transition: all 0.5s ease;
+            cursor: pointer;
+            &:hover {
+              color: hsla(196, 36%, 17%, 1);
+              background-color: transparent;
+              border: 1px solid hsla(196, 36%, 17%, 1);
+            }
+          }
+        }
       }
     }
     .introImgContainer {
@@ -132,6 +190,15 @@
         }
       }
     }
+    .knowMoreBtnContainer {
+      button {
+        &:hover {
+          color: hsla(196, 36%, 17%, 1);
+          background-color: transparent;
+          border: 1px solid hsla(196, 36%, 17%, 1);
+        }
+      }
+    }
   }
 
   .section4 {
@@ -156,6 +223,15 @@
         }
         .readMoreBtnContainer {
           justify-content: flex-start !important;
+          #myBtn {
+            transition: all 0.5s ease;
+            cursor: pointer;
+            &:hover {
+              color: hsla(196, 36%, 17%, 1);
+              background-color: transparent;
+              border: 1px solid hsla(196, 36%, 17%, 1);
+            }
+          }
         }
         .ratingsContainer {
           justify-content: flex-start !important;
@@ -224,11 +300,48 @@
           p {
             color: hsla(196, 10%, 38%, 1);
             text-align: start !important;
+            a {
+              color: hsla(196, 35%, 11%, 1);
+              font-size: 1rem;
+              position: relative;
+              transition: 0.5s ease;
+              &:hover {
+                font-weight: 500;
+                opacity: 1;
+              }
+              &::before {
+                content: "";
+                width: 100%;
+                height: 2px;
+                opacity: 0.001;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                transition: 0.5s ease;
+                background-color: hsla(196, 35%, 11%, 1);
+              }
+              &:hover::before {
+                width: 0;
+                opacity: 1;
+              }
+              &::after {
+                content: "";
+                width: 0;
+                height: 2px;
+                background-color: #1f1534;
+                position: absolute;
+                bottom: 100%;
+                right: 0;
+                transition: 0.5s ease;
+              }
+              &:hover::after {
+                width: 100%;
+              }
+            }
           }
         }
       }
       .footerPenito {
-        // transform: translateY(-7%);
         .footerLogo {
           justify-content: flex-start !important;
         }
